--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@tcgdex/sdk": "^2.6.0",
+    "@types/three": "^0.176.0",
     "caniuse-lite": "^1.0.30001715",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,6 +61,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
