feat: Ajout d'une configuration pour ignorer les bibliothèques implicites manquantes dans tsconfig.app.json
Cette mise à jour ajoute une propriété "types" vide dans le fichier tsconfig.app.json pour ignorer les bibliothèques implicites manquantes, améliorant ainsi la gestion des types dans le projet.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    /* Ignorer les bibliothèques implicites manquantes */
+    "types": []
   },
   "include": ["src"]
 }
