--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.0",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "@tcgdex/sdk": "^2.6.0",
     "@types/three": "^0.176.0",
     "caniuse-lite": "^1.0.30001715",
